prepare to add session

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,7 @@
 <% if (users) { %>
 	<ul>
 		<% users.forEach((user) => { %>
-			<li><%= user.first_name %> <%= user.last_name %> (<%= user.email %>)</li>
+			<li><%= user.firstName %> <%= user.lastName %> (<%= user.email %>)</li>
 		<% }) %>
 	</ul>
 <% } %>
